--- a/ProjetoLINCE/app/src/main/res/layout/dashboard.xml
+++ b/ProjetoLINCE/app/src/main/res/layout/dashboard.xml
@@ -39,7 +39,8 @@
         android:layout_width="match_parent"
         android:layout_height="158dp"
         android:layout_centerInParent="true"
-        android:src="@drawable/bilhete" />
+        android:src="@drawable/bilhete"
+        android:onClick="compraPassagem"/>
 
     <Button
         android:layout_width="match_parent"
