--- a/ProjetoLINCE/app/src/main/res/layout/activity_main.xml
+++ b/ProjetoLINCE/app/src/main/res/layout/activity_main.xml
@@ -22,8 +22,8 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/digite_o_usuario"
-            android:id="@+id/usuario"/>
+            android:hint="Digite o email"
+            android:id="@+id/email"/>
 
         <EditText
             android:layout_width="match_parent"
