Finalizado o crud de usuário falta implementar o de compra de crédito , já existe o botão para chamar o histórico de compra porém falta criar a activity

--- a/ProjetoLINCE/app/src/main/res/layout/cadastro.xml
+++ b/ProjetoLINCE/app/src/main/res/layout/cadastro.xml
@@ -75,12 +75,6 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Digite seu sobrenome"
-            android:id="@+id/edtSobrenome"/>
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:hint="Digite seu email"
             android:id="@+id/edtEmail"/>
 
@@ -102,6 +96,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Cadastrar"
+            android:id="@+id/btnCadastrar"
             android:onClick="cadastro"/>
 
     </LinearLayout>
