--- a/ProjetoLINCE/app/src/main/res/layout/add_credito.xml
+++ b/ProjetoLINCE/app/src/main/res/layout/add_credito.xml
@@ -1,8 +1,10 @@
-<RelativeLayout
+<LinearLayout android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp"
     android:background="@drawable/back02"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
 
     <TextView
         android:layout_width="match_parent"
@@ -13,110 +15,80 @@
         android:textAlignment="center"
         android:layout_marginTop="15dp"
         android:id="@+id/txtPagamento"/>
-
-    <RadioGroup
+    <RadioButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/txtPagamento"
-        android:layout_marginTop="15dp"
-        android:id="@+id/radioGroupPagamento">
-
-        <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Boleto"
-            android:id="@+id/radioBoleto"
-            android:textStyle="bold"
-            android:textSize="15dp"/>
-
-        <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Cartão de crédito"
-            android:textStyle="bold"
-            android:textSize="15dp"
-            android:checked="true"/>
-    </RadioGroup>
+        android:text="Cartão de crédito"
+        android:textStyle="bold"
+        android:textSize="15dp"
+        android:checked="true"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Cartões aceito"
-        android:layout_below="@+id/radioGroupPagamento"
         android:textSize="20dp"
         android:textStyle="bold"
         android:textAlignment="center"
-        android:layout_marginTop="15dp"
         android:id="@+id/cartaoAceito"/>
 
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/visa"
-        android:layout_below="@id/cartaoAceito"
-        android:id="@+id/visa"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="12dp"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:orientation="horizontal"
+        android:padding="10dp"
+        >
 
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/master"
-        android:layout_below="@id/cartaoAceito"
-        android:id="@+id/master"
-        android:layout_toRightOf="@+id/visa"
-        android:layout_marginLeft="35dp"
-        android:layout_marginTop="15dp"/>
+        <ImageView
+            android:id="@+id/visa"
+            android:layout_width="50dp"
+            android:layout_height="30dp"
+            android:src="@drawable/visa"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="40dp"
+            />
 
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/elo"
-        android:layout_below="@id/cartaoAceito"
-        android:id="@+id/elo"
-        android:layout_toRightOf="@+id/master"
-        android:layout_marginLeft="35dp"
-        android:layout_marginTop="15dp"/>
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="30dp"
+            android:src="@drawable/master"
+            android:id="@+id/master"
+            android:layout_marginRight="10dp"
+            />
 
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/american"
-        android:layout_below="@id/cartaoAceito"
-        android:id="@+id/american"
-        android:layout_toRightOf="@+id/elo"
-        android:layout_marginLeft="35dp"
-        android:layout_marginTop="15dp" />
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="30dp"
+            android:src="@drawable/elo"
+            android:id="@+id/elo"
+            android:layout_marginRight="10dp"
+            />
 
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/hiper"
-        android:layout_below="@id/cartaoAceito"
-        android:id="@+id/hiper"
-        android:layout_toRightOf="@+id/american"
-        android:layout_marginLeft="35dp"
-        android:layout_marginTop="15dp"/>
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="30dp"
+            android:src="@drawable/american"
+            android:id="@+id/american"
+            android:layout_marginRight="10dp"
+            />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Informações do cartão de crédito"
-        android:layout_below="@+id/visa"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        android:layout_marginTop="15dp"
-        android:id="@+id/infoCartao"/>
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="30dp"
+            android:src="@drawable/hiper"
+            android:id="@+id/hiper"
+            android:layout_marginRight="10dp"
+            />
+    </LinearLayout>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="number"
         android:hint="Número do cartão de crédito"
-        android:layout_below="@+id/infoCartao"
         android:textAlignment="center"
         android:layout_marginTop="15dp"
+
         android:textSize="20dp"
         android:id="@+id/numCartao"/>
 
@@ -125,57 +97,46 @@
         android:layout_height="wrap_content"
         android:inputType="text"
         android:hint="Nome impresso no cartão"
-        android:layout_below="@+id/numCartao"
         android:textAlignment="center"
         android:layout_marginTop="15dp"
         android:textSize="20dp"
         android:id="@+id/nomeCartao"/>
 
     <EditText
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="number"
+        android:inputType="date"
         android:hint="Data vencimento"
-        android:layout_below="@+id/nomeCartao"
         android:textAlignment="center"
         android:layout_marginTop="15dp"
-        android:layout_marginLeft="5dp"
         android:textSize="20dp"
         android:id="@+id/dtVencimento" />
 
     <EditText
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="number"
         android:hint="Código segurança"
-        android:layout_below="@+id/nomeCartao"
-        android:layout_toRightOf="@+id/dtVencimento"
-        android:layout_marginLeft="5dp"
         android:textAlignment="center"
-        android:layout_marginTop="15dp"
         android:textSize="20dp"
         android:id="@+id/cdSeguranca"/>
-
-    <Button
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:text="Efetuar Pagamento"
-        android:layout_below="@+id/qtdeCredito"
-        android:textStyle="bold"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
-        android:onClick="efetuarPagamento"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Quantia de crédito para carregar"
+        android:hint="Valor"
         android:textAlignment="center"
         android:textSize="20dp"
         android:inputType="numberDecimal"
-        android:layout_below="@+id/cdSeguranca"
-        android:layout_marginTop="20dp"
-        android:id="@+id/qtdeCredito"/>
+        android:id="@+id/valorCredito"/>
 
-</RelativeLayout>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:text="Efetuar Pagamento"
+        android:textStyle="bold"
+        android:onClick="efetuarPagamento"/>
+
+
+</LinearLayout>
