--- a/ProjetoLINCE/app/src/main/res/layout/trocar_senha.xml
+++ b/ProjetoLINCE/app/src/main/res/layout/trocar_senha.xml
@@ -24,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Senha Nova"
+            android:id="@+id/senhaNova"
             android:inputType="textPassword" />
 
         <EditText
@@ -31,6 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:hint="Confirmar Senha"
+            android:id="@+id/confirmaSenhaNova"
             android:inputType="textPassword" />
 
         <Button
